--- a/simple-todos/simple-todos.html
+++ b/simple-todos/simple-todos.html
@@ -1,6 +1,6 @@
 <!-- simple-todos.html -->
 <head>
-    <title>Todo list</title>
+    <title>Todo List</title>
 </head>
 
 <body>
@@ -11,7 +11,7 @@
 
     <ul>
         {{#each tasks}}
-            {{>tasks}}
+            {{>task}}
         {{/each}}
     </ul>
 </div>
